--- a/environment.yml
+++ b/environment.yml
@@ -2,26 +2,34 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - altgraph=0.17.3=pyhd8ed1ab_0
-  - bzip2=1.0.8=he774522_0
-  - ca-certificates=2023.5.7=h56e8100_0
-  - future=0.18.3=pyhd8ed1ab_0
-  - libffi=3.4.4=hd77b12b_0
-  - openssl=3.0.9=h2bbff1b_0
+  - altgraph=0.17.4=pyhd8ed1ab_0
+  - bzip2=1.0.8=h2466b09_7
+  - ca-certificates=2024.7.4=h56e8100_0
+  - future=1.0.0=pyhd8ed1ab_0
+  - importlib-metadata=8.2.0=pyha770c72_0
+  - importlib_metadata=8.2.0=hd8ed1ab_0
+  - libffi=3.4.4=hd77b12b_1
+  - libsqlite=3.46.0=h2466b09_0
+  - libzlib=1.3.1=h2466b09_1
+  - openssl=3.3.1=h2466b09_2
+  - packaging=24.1=pyhd8ed1ab_0
   - pefile=2023.2.7=pyhd8ed1ab_0
-  - pip=23.1.2=py310haa95532_0
-  - pyinstaller=5.6.2=py310h2bbff1b_0
-  - pyinstaller-hooks-contrib=2023.3=pyhd8ed1ab_0
-  - python=3.10.11=he1021f5_3
-  - python_abi=3.10=2_cp310
-  - pywin32=305=py310h2bbff1b_0
-  - pywin32-ctypes=0.2.1=py310h5588dad_0
-  - setuptools=67.8.0=py310haa95532_0
-  - sqlite=3.41.2=h2bbff1b_0
-  - tk=8.6.12=h2bbff1b_0
-  - tzdata=2023c=h04d1e81_0
-  - vc=14.2=h21ff451_1
-  - vs2015_runtime=14.27.29016=h5e58377_2
-  - wheel=0.38.4=py310haa95532_0
-  - xz=5.4.2=h8cc25b3_0
-  - zlib=1.2.13=h8cc25b3_0
+  - pip=24.2=pyhd8ed1ab_0
+  - pyinstaller=6.10.0=py310hba29400_0
+  - pyinstaller-hooks-contrib=2024.8=pyhd8ed1ab_0
+  - python=3.10.14=h4de0772_0_cpython
+  - python_abi=3.10=4_cp310
+  - pywin32=306=py310h00ffb61_2
+  - pywin32-ctypes=0.2.2=py310h5588dad_1
+  - setuptools=72.1.0=pyhd8ed1ab_0
+  - sqlite=3.46.0=h2466b09_0
+  - tk=8.6.13=h5226925_1
+  - tzdata=2024a=h0c530f3_0
+  - ucrt=10.0.22621.0=h57928b3_0
+  - vc=14.40=h2eaa2aa_0
+  - vc14_runtime=14.40.33810=ha82c5b3_20
+  - vs2015_runtime=14.40.33810=h3bf8584_20
+  - wheel=0.44.0=pyhd8ed1ab_0
+  - xz=5.4.6=h8cc25b3_1
+  - zipp=3.19.2=pyhd8ed1ab_0
+  - zlib=1.3.1=h2466b09_1
